...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.semantics.Role
import kotlinx.datetime.TimeZone
import reframecv.domain.models.vacancy.Vacancy
import reframecv.ui.theme.ReframeTheme

internal const val VACANCIES_LIST_TAG = "vacancies.list"

@Composable
internal fun VacanciesList(
    vacancies: List<Vacancy>,
    timeZone: TimeZone,
    onEdit: (Vacancy) -> Unit,
...
